overflow container fix

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -70,14 +70,13 @@ body {
 	}
 }
 
-// Dark
-
+// Dark & Light Mode
 .darkBody {
 	background-color: #131313;
 }
 
 .lightBody {
-	background-color: white;
+	background-color: rgb(241, 241, 241);
 }
 
 .dark {
@@ -103,12 +102,12 @@ body {
 }
 
 .light {
-	background-color: rgb(236, 236, 236);
+	background-color: rgb(255, 255, 255);
 	color: $grey;
 	.container {
 		background-color: rgb(255, 255, 255);
 		&:hover {
-			background-color: rgb(245, 246, 255);
+			background-color: rgb(230, 232, 253);
 		}
 	}
 	input,
@@ -116,6 +115,7 @@ body {
 	select,
 	button {
 		background-color: white;
+		box-shadow: 1px 1px 6px #335fce6b;
 		&:focus,
 		&:hover {
 			background-color: rgb(228, 228, 228);
